# agentic-rag-practice-exam

./: .env.example  .gitignore  QUICKSTART.md  pyproject.toml
apps/api/: auth.py  main.py  settings.py
apps/api/agent/: graph.py  state.py  tools.py
apps/api/agent/nodes/: generate.py  rerank.py  retrieve.py  route.py
apps/api/db/: models.py  session.py
apps/api/db/migrations/: env.py
apps/api/routes/: chat.py  courses.py  upload.py
apps/api/skills/: cheatsheet.py  practice_exam.py
apps/web/: auth.ts  middleware.ts  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/chat/: page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/lib/: api.ts
infra/: render.yaml
infra/docker/: api.Dockerfile
