[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcb-tutor"
version = "0.1.0"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["apps/api", "packages/ingest"]

# ── API (FastAPI backend) ──────────────────────────────────────────────────────
[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "langsmith>=0.1",
    "pinecone-client>=3.2",
    "anthropic>=0.28",
    "reportlab>=4.1",
    "matplotlib>=3.8",
    "pypdf>=4.0",
    "openai>=1.30",
    "jinja2>=3.1",
    "httpx>=0.27",
]

ingest = [
    "python-pptx>=0.6",
    "python-docx>=1.1",
    "openai>=1.30",
    "pinecone-client>=3.2",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "tiktoken>=0.7",
    "tqdm>=4.66",
    "pdf2image>=1.17",   # slide image rendering (requires poppler + LibreOffice)
    "python-dotenv>=1.0",
]

dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
